--- a/index.html
+++ b/index.html
@@ -323,6 +323,365 @@
                     clearTimeout(holdTimer);
                     holdTimer = setTimeout(() => {
                         if (isHolding && currentVideo) currentVideo.pause();
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title>Reel Of The Day</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            background-color: #000;
+            overflow: hidden;
+            -webkit-user-select: none;
+            user-select: none;
+            touch-action: manipulation;
+        }
+
+        #reels-container {
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .video-container {
+            position: absolute;
+            width: 100%;
+            height: 100vh;
+            top: 0;
+            left: 0;
+            background-color: #000;
+        }
+
+        video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+            background-color: #000;
+        }
+
+        .fixed-overlay {
+            position: fixed;
+            bottom: 80px;
+            left: 15px;
+            width: calc(100% - 30px);
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            background: transparent;
+        }
+
+        .profile-pic {
+            width: 45px;
+            height: 45px;
+            object-fit: cover;
+            border-radius: 50%;
+            border: 2px solid white;
+            cursor: pointer;
+            pointer-events: auto;
+        }
+
+        .user-info {
+            margin-left: 10px;
+            color: white;
+            cursor: pointer;
+            pointer-events: auto;
+        }
+
+        .username {
+            font-size: 16px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+        }
+
+        .verify-badge {
+            width: 16px;
+            height: 16px;
+            margin-left: 5px;
+        }
+
+        .title {
+            font-size: 14px;
+            opacity: 0.9;
+            position: fixed;
+            bottom: 40px;
+            left: 15px;
+            width: calc(100% - 30px);
+            color: white;
+            padding: 5px 10px;
+            background: transparent;
+            border-radius: 8px;
+            white-space: normal;
+            pointer-events: none;
+        }
+
+        .like-animation {
+            position: absolute;
+            width: 150px;
+            height: 150px;
+            opacity: 0;
+            transform: scale(0.5);
+            animation: likePop 0.4s ease-out forwards;
+            z-index: 12;
+        }
+
+        @keyframes likePop {
+            0% { opacity: 0; transform: scale(0.5); }
+            50% { opacity: 1; transform: scale(1.2); }
+            100% { opacity: 0; transform: scale(1); }
+        }
+
+        .progress-bar {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            height: 4px;
+            background: rgba(255, 255, 255, 0.8);
+            width: 0;
+            z-index: 11;
+            cursor: pointer;
+        }
+
+        body {
+            -webkit-touch-callout: none;
+            -webkit-user-drag: none;
+        }
+    </style>
+</head>
+<body oncontextmenu="return false;">
+    <div id="reels-container"></div>
+    
+    <div class="fixed-overlay">
+        <img class="profile-pic" id="profile-pic" src="">
+        <div class="user-info">
+            <div class="username" id="username">
+                <span id="username-text">Loading...</span>
+                <img class="verify-badge" id="verify-badge" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Twitter_Verified_Badge_Gold.svg/2048px-Twitter_Verified_Badge_Gold.svg.png">
+            </div>
+        </div>
+    </div>
+    
+    <div class="title" id="title" onclick="showFullTitle()">Loading...</div>
+
+    <script>
+        let fullTitle = "";
+        let isAudioEnabled = localStorage.getItem('audioEnabled') === 'true' || false;
+        let allReels = [];
+        let currentIndex = 0;
+        let touchStartY = 0;
+        let isTransitioning = false;
+        let currentVideo = null;
+        let holdTimer = null;
+        let shuffledReels = [];
+
+        const urlParams = new URLSearchParams(window.location.search);
+        const initialReelId = urlParams.get('reelId') || null;
+
+        const container = document.getElementById('reels-container');
+        const profilePic = document.getElementById('profile-pic');
+        const usernameText = document.getElementById('username-text');
+        const usernameContainer = document.getElementById('username');
+        const verifyBadge = document.getElementById('verify-badge');
+        const title = document.getElementById('title');
+
+        function setAudioPersistence() {
+            localStorage.setItem('audioEnabled', 'true');
+            isAudioEnabled = true;
+            if (currentVideo) {
+                currentVideo.muted = false;
+                currentVideo.play().catch((error) => console.log("Play error:", error));
+            }
+        }
+
+        if (isAudioEnabled) {
+            console.log("Audio enabled from LocalStorage");
+        }
+
+        function shuffleArray(array) {
+            let shuffled = [...array];
+            for (let i = shuffled.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [shuffled[i], shuffled[j]] = [shuffled[j], shuffled[i]];
+            }
+            return shuffled;
+        }
+
+        async function loadData() {
+            try {
+                const [profilesResponse, reelsResponse] = await Promise.all([
+                    fetch('profiles.json').then(res => {
+                        if (!res.ok) throw new Error('Profiles fetch failed');
+                        return res.json();
+                    }),
+                    fetch('reels.json').then(res => {
+                        if (!res.ok) throw new Error('Reels fetch failed');
+                        return res.json();
+                    })
+                ]);
+
+                const profiles = profilesResponse.profiles || [];
+                allReels = reelsResponse.reels || [];
+
+                if (allReels.length === 0) {
+                    container.innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">No reels available.</div>';
+                    return { profiles, success: false };
+                }
+
+                shuffledReels = shuffleArray(allReels);
+                return { profiles, success: true };
+            } catch (error) {
+                console.error('Error loading data:', error);
+                container.innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">Failed to load reels. Retrying...</div>';
+                setTimeout(loadData, 2000); // Retry after 2 seconds
+                return { profiles: [], success: false };
+            }
+        }
+
+        async function initialize() {
+            const { profiles, success } = await loadData();
+            if (!success) return;
+
+            currentIndex = initialReelId ? 
+                shuffledReels.findIndex(reel => reel.reelId === initialReelId) : 
+                0;
+            if (currentIndex === -1) currentIndex = 0;
+
+            function getProfileById(id) {
+                return profiles.find(profile => profile.id === id) || { 
+                    username: "bot", 
+                    profile: "https://i.postimg.cc/3Rh3SjRb/image.jpg", 
+                    verified: true
+                };
+            }
+
+            function createVideoElement(reel, index) {
+                const div = document.createElement('div');
+                div.className = 'video-container';
+
+                const video = document.createElement('video');
+                video.playsInline = true;
+                video.controls = false;
+                video.muted = false; // Shuru se muted nahi
+                video.loop = true;
+                video.dataset.index = index;
+                video.dataset.title = reel.title;
+                video.src = reel.media;
+
+                const progressBar = document.createElement('div');
+                progressBar.className = 'progress-bar';
+                document.body.appendChild(progressBar);
+
+                video.addEventListener('canplay', () => {
+                    currentVideo = video;
+                    updateMetadata(reel);
+                    video.play().catch((error) => console.log("Initial play error:", error));
+                });
+
+                video.addEventListener('timeupdate', () => {
+                    if (!video.paused) {
+                        const progress = (video.currentTime / video.duration) * 100;
+                        progressBar.style.width = `${progress}%`;
+                    }
+                });
+
+                video.addEventListener('error', () => {
+                    console.error(`Failed to load video: ${reel.media}`);
+                    nextReel(); // Skip to next reel on error
+                });
+
+                video.addEventListener('touchstart', (e) => {
+                    e.preventDefault();
+                    if (!isAudioEnabled) {
+                        setAudioPersistence();
+                    }
+                });
+
+                progressBar.addEventListener('mousedown', (e) => {
+                    const rect = progressBar.getBoundingClientRect();
+                    const seek = (e.clientX - rect.left) / rect.width;
+                    video.currentTime = video.duration * seek;
+                });
+
+                progressBar.addEventListener('mousemove', (e) => {
+                    if (e.buttons === 1) {
+                        const rect = progressBar.getBoundingClientRect();
+                        const seek = (e.clientX - rect.left) / rect.width;
+                        video.currentTime = video.duration * seek;
+                    }
+                });
+
+                progressBar.addEventListener('click', (e) => {
+                    const rect = progressBar.getBoundingClientRect();
+                    const seek = (e.clientX - rect.left) / rect.width;
+                    video.currentTime = video.duration * seek;
+                    video.play().catch(() => {});
+                });
+
+                div.addEventListener('dblclick', (e) => {
+                    showLikeAnimation(div, e); // Like animation video container par
+                });
+
+                div.appendChild(video);
+                return div;
+            }
+
+            function updateMetadata(reel) {
+                fullTitle = reel.title;
+                title.innerText = reel.title;
+                const profileData = getProfileById(reel.id);
+                profilePic.src = profileData.profile || "https://i.postimg.cc/3Rh3SjRb/image.jpg";
+                usernameText.innerText = profileData.username;
+                verifyBadge.style.display = profileData.verified ? "inline" : "none";
+                profilePic.dataset.id = reel.id;
+                usernameContainer.dataset.id = reel.id;
+            }
+
+            async function loadCurrentReel() {
+                container.innerHTML = '';
+                const existingProgress = document.querySelector('.progress-bar');
+                if (existingProgress) existingProgress.remove();
+
+                if (currentIndex >= shuffledReels.length) {
+                    shuffledReels = shuffleArray(allReels); // Reshuffle when all reels are done
+                    currentIndex = 0;
+                }
+
+                const reel = shuffledReels[currentIndex];
+                const videoElement = createVideoElement(reel, currentIndex);
+                container.appendChild(videoElement);
+                window.history.pushState({}, document.title, `/Instagram/?reelId=${reel.reelId}`);
+            }
+
+            function nextReel() {
+                currentIndex++;
+                loadCurrentReel();
+            }
+
+            function prevReel() {
+                if (currentIndex > 0) {
+                    currentIndex--;
+                    loadCurrentReel();
+                }
+            }
+
+            function enableScrollPlayback() {
+                let touchStartY = 0;
+                let touchMoveY = 0;
+                let isHolding = false;
+
+                container.addEventListener('touchstart', (e) => {
+                    touchStartY = e.touches[0].clientY;
+                    touchMoveY = touchStartY;
+                    isHolding = true;
+                    clearTimeout(holdTimer);
+                    holdTimer = setTimeout(() => {
+                        if (isHolding && currentVideo) currentVideo.pause();
                     }, 500); // Holding time 500ms
                 });
 
@@ -338,18 +697,14 @@
                     clearTimeout(holdTimer);
                     if (isHolding && Math.abs(swipeDistance) < 50 && currentVideo) {
                         currentVideo.play().catch(() => {});
-                    } else if (swipeDistance > 50 && currentIndex < allReels.length - 1) {
+                    } else if (swipeDistance > 50) {
                         isTransitioning = true;
-                        currentIndex++;
-                        loadCurrentReel().then(() => {
-                            isTransitioning = false;
-                        });
-                    } else if (swipeDistance < -50 && currentIndex > 0) {
+                        nextReel();
+                        setTimeout(() => { isTransitioning = false; }, 100);
+                    } else if (swipeDistance < -50) {
                         isTransitioning = true;
-                        currentIndex--;
-                        loadCurrentReel().then(() => {
-                            isTransitioning = false;
-                        });
+                        prevReel();
+                        setTimeout(() => { isTransitioning = false; }, 100);
                     }
                     isHolding = false;
                 });
@@ -372,26 +727,18 @@
                     }
                 });
 
-                container.addEventListener('dblclick', (e) => {
-                    showLikeAnimation(container, e); // Like wala wapas add
-                });
-
                 container.addEventListener('wheel', (e) => {
                     if (isTransitioning) return;
                     e.preventDefault();
 
-                    if (e.deltaY > 0 && currentIndex < allReels.length - 1) {
+                    if (e.deltaY > 0) {
                         isTransitioning = true;
-                        currentIndex++;
-                        loadCurrentReel().then(() => {
-                            isTransitioning = false;
-                        });
-                    } else if (e.deltaY < 0 && currentIndex > 0) {
+                        nextReel();
+                        setTimeout(() => { isTransitioning = false; }, 100);
+                    } else if (e.deltaY < 0) {
                         isTransitioning = true;
-                        currentIndex--;
-                        loadCurrentReel().then(() => {
-                            isTransitioning = false;
-                        });
+                        prevReel();
+                        setTimeout(() => { isTransitioning = false; }, 100);
                     }
                 });
 
