--- a/index.html
+++ b/index.html
@@ -4,130 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Reel Of The Day</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            background-color: #000;
-            overflow: hidden;
-            -webkit-user-select: none;
-            user-select: none;
-            touch-action: manipulation;
-        }
-
-        #reels-container {
-            width: 100%;
-            height: 100vh;
-            overflow: hidden;
-            position: relative;
-        }
-
-        .video-container {
-            position: absolute;
-            width: 100%;
-            height: 100vh;
-            top: 0;
-            left: 0;
-            background-color: #000;
-        }
-
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            display: block;
-            background-color: #000;
-        }
-
-        .fixed-overlay {
-            position: fixed;
-            bottom: 80px;
-            left: 15px;
-            width: calc(100% - 30px);
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            background: transparent;
-        }
-
-        .profile-pic {
-            width: 45px;
-            height: 45px;
-            object-fit: cover;
-            border-radius: 50%;
-            border: 2px solid white;
-            cursor: pointer;
-            pointer-events: auto;
-        }
-
-        .user-info {
-            margin-left: 10px;
-            color: white;
-            cursor: pointer;
-            pointer-events: auto;
-        }
-
-        .username {
-            font-size: 16px;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-        }
-
-        .verify-badge {
-            width: 16px;
-            height: 16px;
-            margin-left: 5px;
-        }
-
-        .title {
-            font-size: 14px;
-            opacity: 0.9;
-            position: fixed;
-            bottom: 40px;
-            left: 15px;
-            width: calc(100% - 30px);
-            color: white;
-            padding: 5px 10px;
-            background: transparent;
-            border-radius: 8px;
-            white-space: normal;
-            pointer-events: none;
-        }
-
-        .like-animation {
-            position: absolute;
-            width: 150px;
-            height: 150px;
-            opacity: 0;
-            transform: scale(0.5);
-            animation: likePop 0.4s ease-out forwards;
-            z-index: 100; /* Video ke upar dikhne ke liye */
-        }
-
-        @keyframes likePop {
-            0% { opacity: 0; transform: scale(0.5); }
-            50% { opacity: 1; transform: scale(1.2); }
-            100% { opacity: 0; transform: scale(1); }
-        }
-
-        .progress-bar {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            height: 4px;
-            background: rgba(255, 255, 255, 0.8);
-            width: 0;
-            z-index: 11;
-            cursor: pointer;
-        }
-
-        body {
-            -webkit-touch-callout: none;
-            -webkit-user-drag: none;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body oncontextmenu="return false;">
     <div id="reels-container"></div>
@@ -143,323 +20,13 @@
     </div>
     
     <div class="title" id="title" onclick="showFullTitle()">Loading...</div>
+    
+    <!-- Top-right logo -->
+    <img class="top-right-logo" src="https://i.postimg.cc/X77btM3F/20250328-151255.png" alt="Logo">
 
-    <script>
-        let fullTitle = "";
-        let isAudioEnabled = localStorage.getItem('audioEnabled') === 'true' || false;
-        let allReels = [];
-        let currentIndex = 0;
-        let touchStartY = 0;
-        let isTransitioning = false;
-        let currentVideo = null;
-        let holdTimer = null;
-        let shuffledReels = [];
-
-        const urlParams = new URLSearchParams(window.location.search);
-        const initialReelId = urlParams.get('reelId') || null;
-
-        const container = document.getElementById('reels-container');
-        const profilePic = document.getElementById('profile-pic');
-        const usernameText = document.getElementById('username-text');
-        const usernameContainer = document.getElementById('username');
-        const verifyBadge = document.getElementById('verify-badge');
-        const title = document.getElementById('title');
-
-        function setAudioPersistence() {
-            localStorage.setItem('audioEnabled', 'true');
-            isAudioEnabled = true;
-            if (currentVideo) {
-                currentVideo.muted = false;
-                currentVideo.play().catch((error) => console.log("Play error:", error));
-            }
-        }
-
-        if (isAudioEnabled) {
-            console.log("Audio enabled from LocalStorage");
-        }
-
-        function shuffleArray(array) {
-            let shuffled = [...array];
-            for (let i = shuffled.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [shuffled[i], shuffled[j]] = [shuffled[j], shuffled[i]];
-            }
-            return shuffled;
-        }
-
-        async function loadData() {
-            try {
-                const [profilesResponse, reelsResponse] = await Promise.all([
-                    fetch('profiles.json').then(res => {
-                        if (!res.ok) throw new Error('Profiles fetch failed');
-                        return res.json();
-                    }),
-                    fetch('reels.json').then(res => {
-                        if (!res.ok) throw new Error('Reels fetch failed');
-                        return res.json();
-                    })
-                ]);
-
-                const profiles = profilesResponse.profiles || [];
-                allReels = reelsResponse.reels || [];
-
-                if (allReels.length === 0) {
-                    container.innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">No reels available.</div>';
-                    return { profiles, success: false };
-                }
-
-                shuffledReels = shuffleArray(allReels);
-                return { profiles, success: true };
-            } catch (error) {
-                console.error('Error loading data:', error);
-                container.innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">Loading failed. Retrying...</div>';
-                setTimeout(() => loadData(), 2000);
-                return { profiles: [], success: false };
-            }
-        }
-
-        async function initialize() {
-            container.innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">Loading reels...</div>';
-            const { profiles, success } = await loadData();
-            if (!success) return;
-
-            currentIndex = initialReelId ? 
-                shuffledReels.findIndex(reel => reel.reelId === initialReelId) : 
-                0;
-            if (currentIndex === -1) currentIndex = 0;
-
-            function getProfileById(id) {
-                return profiles.find(profile => profile.id === id) || { 
-                    username: "bot", 
-                    profile: "https://i.postimg.cc/3Rh3SjRb/image.jpg", 
-                    verified: true
-                };
-            }
-
-            function createVideoElement(reel, index) {
-                const div = document.createElement('div');
-                div.className = 'video-container';
-
-                const video = document.createElement('video');
-                video.playsInline = true;
-                video.controls = false;
-                video.muted = !isAudioEnabled; // Audio state ke hisaab se
-                video.loop = true;
-                video.dataset.index = index;
-                video.dataset.title = reel.title;
-                video.src = reel.media;
-
-                const progressBar = document.createElement('div');
-                progressBar.className = 'progress-bar';
-                document.body.appendChild(progressBar);
-
-                video.addEventListener('canplay', () => {
-                    currentVideo = video;
-                    updateMetadata(reel);
-                    video.play().catch((error) => console.log("Initial play error:", error));
-                });
-
-                video.addEventListener('timeupdate', () => {
-                    if (!video.paused) {
-                        const progress = (video.currentTime / video.duration) * 100;
-                        progressBar.style.width = `${progress}%`;
-                    }
-                });
-
-                video.addEventListener('error', () => {
-                    console.error(`Failed to load video: ${reel.media}`);
-                    nextReel();
-                });
-
-                video.addEventListener('touchstart', (e) => {
-                    e.preventDefault();
-                    if (!isAudioEnabled) {
-                        setAudioPersistence();
-                    }
-                });
-
-                progressBar.addEventListener('mousedown', (e) => {
-                    const rect = progressBar.getBoundingClientRect();
-                    const seek = (e.clientX - rect.left) / rect.width;
-                    video.currentTime = video.duration * seek;
-                });
-
-                progressBar.addEventListener('mousemove', (e) => {
-                    if (e.buttons === 1) {
-                        const rect = progressBar.getBoundingClientRect();
-                        const seek = (e.clientX - rect.left) / rect.width;
-                        video.currentTime = video.duration * seek;
-                    }
-                });
-
-                progressBar.addEventListener('click', (e) => {
-                    const rect = progressBar.getBoundingClientRect();
-                    const seek = (e.clientX - rect.left) / rect.width;
-                    video.currentTime = video.duration * seek;
-                    video.play().catch(() => {});
-                });
-
-                // Double-click event video aur div dono par
-                div.addEventListener('dblclick', (e) => {
-                    console.log("Double click on div:", e.clientX, e.clientY);
-                    showLikeAnimation(div, e);
-                });
-
-                video.addEventListener('dblclick', (e) => {
-                    console.log("Double click on video:", e.clientX, e.clientY);
-                    showLikeAnimation(div, e);
-                    e.preventDefault(); // Video ke default behavior ko rokne ke liye
-                });
-
-                div.appendChild(video);
-                return div;
-            }
-
-            function updateMetadata(reel) {
-                fullTitle = reel.title;
-                title.innerText = reel.title;
-                const profileData = getProfileById(reel.id);
-                profilePic.src = profileData.profile || "https://i.postimg.cc/3Rh3SjRb/image.jpg";
-                usernameText.innerText = profileData.username;
-                verifyBadge.style.display = profileData.verified ? "inline" : "none";
-                profilePic.dataset.id = reel.id;
-                usernameContainer.dataset.id = reel.id;
-            }
-
-            async function loadCurrentReel() {
-                container.innerHTML = '';
-                const existingProgress = document.querySelector('.progress-bar');
-                if (existingProgress) existingProgress.remove();
-
-                if (currentIndex >= shuffledReels.length) {
-                    shuffledReels = shuffleArray(allReels);
-                    currentIndex = 0;
-                }
-
-                const reel = shuffledReels[currentIndex];
-                const videoElement = createVideoElement(reel, currentIndex);
-                container.appendChild(videoElement);
-                window.history.pushState({}, document.title, `/Instagram/?reelId=${reel.reelId}`);
-            }
-
-            function nextReel() {
-                currentIndex++;
-                loadCurrentReel();
-            }
-
-            function prevReel() {
-                if (currentIndex > 0) {
-                    currentIndex--;
-                    loadCurrentReel();
-                }
-            }
-
-            function enableScrollPlayback() {
-                let touchStartY = 0;
-                let touchMoveY = 0;
-                let isHolding = false;
-
-                container.addEventListener('touchstart', (e) => {
-                    touchStartY = e.touches[0].clientY;
-                    touchMoveY = touchStartY;
-                    isHolding = true;
-                    clearTimeout(holdTimer);
-                    holdTimer = setTimeout(() => {
-                        if (isHolding && currentVideo) currentVideo.pause();
-                    }, 500);
-                });
-
-                container.addEventListener('touchmove', (e) => {
-                    touchMoveY = e.touches[0].clientY;
-                });
-
-                container.addEventListener('touchend', (e) => {
-                    if (isTransitioning) return;
-                    const touchEndY = e.changedTouches[0].clientY;
-                    const swipeDistance = touchStartY - touchEndY;
-
-                    clearTimeout(holdTimer);
-                    if (isHolding && Math.abs(swipeDistance) < 50 && currentVideo) {
-                        currentVideo.play().catch(() => {});
-                    } else if (swipeDistance > 50) {
-                        isTransitioning = true;
-                        nextReel();
-                        setTimeout(() => { isTransitioning = false; }, 100);
-                    } else if (swipeDistance < -50) {
-                        isTransitioning = true;
-                        prevReel();
-                        setTimeout(() => { isTransitioning = false; }, 100);
-                    }
-                    isHolding = false;
-                });
-
-                container.addEventListener('mousedown', (e) => {
-                    if (e.button === 0) {
-                        isHolding = true;
-                        clearTimeout(holdTimer);
-                        holdTimer = setTimeout(() => {
-                            if (isHolding && currentVideo) currentVideo.pause();
-                        }, 500);
-                    }
-                });
-
-                container.addEventListener('mouseup', (e) => {
-                    if (isHolding && e.button === 0) {
-                        clearTimeout(holdTimer);
-                        if (currentVideo) currentVideo.play().catch(() => {});
-                        isHolding = false;
-                    }
-                });
-
-                container.addEventListener('wheel', (e) => {
-                    if (isTransitioning) return;
-                    e.preventDefault();
-
-                    if (e.deltaY > 0) {
-                        isTransitioning = true;
-                        nextReel();
-                        setTimeout(() => { isTransitioning = false; }, 100);
-                    } else if (e.deltaY < 0) {
-                        isTransitioning = true;
-                        prevReel();
-                        setTimeout(() => { isTransitioning = false; }, 100);
-                    }
-                });
-
-                profilePic.addEventListener('click', () => {
-                    const profileId = profilePic.dataset.id;
-                    window.open(`profiles.html?id=${profileId}`, '_blank');
-                });
-
-                usernameContainer.addEventListener('click', () => {
-                    const profileId = usernameContainer.dataset.id;
-                    window.open(`profiles.html?id=${profileId}`, '_blank');
-                });
-            }
-
-            function showFullTitle() {
-                alert(fullTitle);
-            }
-
-            function showLikeAnimation(container, event) {
-                console.log("Showing like animation at:", event.clientX, event.clientY);
-                const heart = document.createElement('img');
-                heart.src = "https://png.pngtree.com/png-vector/20220428/ourmid/pngtree-smooth-glossy-heart-vector-file-ai-and-png-png-image_4557871.png";
-                heart.className = 'like-animation';
-                heart.style.left = `${event.clientX - 75}px`; // Center the 150px wide heart
-                heart.style.top = `${event.clientY - 75}px`;
-                heart.style.zIndex = '100'; // Video ke upar
-                container.appendChild(heart);
-                setTimeout(() => {
-                    if (heart.parentNode) container.removeChild(heart);
-                }, 400);
-            }
-
-            loadCurrentReel();
-            enableScrollPlayback();
-        }
-
-        initialize();
-    </script>
+    <script src="js/utils.js"></script>
+    <script src="js/dataLoader.js"></script>
+    <script src="js/videoHandler.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
